# sail-tiny-x86

./: .gitignore  LICENSE  Makefile  README.md  coq-sail-tiny-x86.opam  decode.sail  dune  dune-project  interface.sail  operand_types.sail  operands.sail  prelude.sail  registers.sail  sail_files  tests.sail  tiny-x86.sail
snapshot/: Tiny_x86.v  Tiny_x86_types.v
